fix side caption on mobile

--- a/pateeva/css/style.scss
+++ b/pateeva/css/style.scss
@@ -88,6 +88,7 @@ h2 {
     position: absolute;
     top: 0;
     right: -100px;
+    width: 10px;
     height: 100%;
     border-right: 1px solid #d7d7d7;
     padding: 100px 3px 20px 0px;
